--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -113,3 +113,38 @@ button:active {
 .categories {
   margin-left: 50px;
 }
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+  background-color: #000;
+  color: #f6f6f6;
+  width: auto;
+}
+
+.tooltip .tooltiptext {
+  text-align: center;
+  background-color: #555;
+  color: #fff;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -60px;
+ 
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
