first mockup version of the graph

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -172,3 +172,6 @@ button:active {
   border-color: #555 transparent transparent transparent;
 }
 
+.overview-heatmap-svg {
+  background-color: #292929;
+}
