--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -286,46 +286,89 @@ button:active {
  * elements within the div associated with the tab.
  */
 
-#songs #songs-beeswarm-plot {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#songs #songs-control {
-  position: relative;
-  width: 81%;
-  height: 120px;
-  border-radius: 28px;
-  background-color: #292929;
-  display: inline-flex;
-  flex-direction: row;
-}
-
-#songs .songs-dropdown {
-  width: 400px;
-  margin-left: 20%;
-}
-
-#songs .songs-slider {
-  width: 400px;
-  margin-left: 10%;
+#songs #songs-viz-wrapper {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-gap: 30px;
+  padding: 30px;
 }
 
 #songs #songs-panel {
-  position: relative;
-  top: -65px;
-  width: 350px;
-  height: 630px;
+  background-color: #292929;
+  grid-row: 1 / span 2;
+  grid-column: 2;
   border: 2px solid #A6A6A6;
   border-radius: 28px;
-  margin-left: 15px;
+  padding: 20px;
+}
+
+#songs #songs-panel.empty {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#songs #songs-panel .songs-tooltip-main-text {
+  font-family: 'Roboto';
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  padding-top: 10px
+}
+
+#songs #songs-panel .songs-tooltip-sub-text {
+  font-family: 'Roboto';
+  font-size: 16px;
+  font-weight: none;
+  color: white;
+  padding-top: 3px;
+}
+
+#songs #songs-panel .songs-tooltip-list-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px;
+}
+
+#songs #songs-panel .songs-tooltip-list {
+  font-family: 'Roboto';
+  font-size: 16px;
+  color: white;
+  padding-left: 22px;
+  margin-top: 10px;
+}
+
+#songs #songs-control {
   background-color: #292929;
-  text-align: left;
-  padding: 10px;
-  color: #fff
+  border-radius: 28px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding: 30px 0px;
+}
+
+#songs #songs-control .songs-dropdown {
+  width: 250px;
+}
+
+#songs #songs-control .songs-dropdown-title {
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+#songs #songs-control .songs-slider {
+  width: 400px;
+}
+
+#songs #songs-control .songs-slider-title {
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  text-align: center;
 }
 
 #songs .axis-text {
@@ -340,7 +383,7 @@ button:active {
   padding-right: 300px;
 }
 
-#songs .viz-container{
+#songs .viz-container {
   padding-top: 10px;
   background-color: #151515;
   border: 1px solid white;
@@ -360,6 +403,10 @@ button:active {
 }
 
 #songs .points .selected {
+  fill: #387DAF;
+}
+
+#songs .points circle:hover {
   fill: #387DAF;
 }
 
