--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -12,7 +12,7 @@
 body {
   font-family: "Roboto Slab", "sans-serif";
   font-size: 16px;
-  background-color: #fff;
+  background-color: #141414;
   color: #2a2b2e;
   margin: 0;
   height: 100vh;
@@ -20,9 +20,8 @@ body {
 }
 
 header {
-  background-color: #fff;
+  background-color: #141414;
   padding: 25px 100px;
-  border-bottom: 2px solid #97939a;
 }
 
 main {
@@ -31,7 +30,7 @@ main {
 }
 
 h1 {
-  color: #2a2b2e;
+  color: #F0F0F0;
   font-family: "Roboto Slab", "serif";
   font-size: 56px;
   margin: 0;
@@ -39,13 +38,15 @@ h1 {
 }
 
 h2 {
-  color: #2a2b2e;
+  color: #F0F0F0;
   font-family: "Roboto Slab", "serif";
   font-weight: normal;
 }
 
 h3 {
   color: #f3f3f3;
+  font-weight: normal;
+  margin-top: 30px;
 }
 
 svg {
@@ -62,12 +63,6 @@ button {
   outline: 0;
   font-family: "Helvetica", "sans-serif";
   font-size: 16px;
-}
-
-button:hover,
-button:active {
-  background: linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
-  background-color: #f6f6f6;
 }
 
 .viz-container {
@@ -93,14 +88,14 @@ button:active {
   padding: 0 16px;
   border-radius: 8px;
   cursor: pointer;
-  background-color: #fff;
+  background-color: rgba(31, 30, 30, 1);
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
 
 .dropdown-select-btn .dropdown-btn-text {
   font-size: 17px;
   font-weight: 400;
-  color: #333;
+  color: white;
 }
 
 .dropdown-select-btn .dropdown-arrow-dwn {
@@ -110,7 +105,6 @@ button:active {
   color: #fff;
   font-size: 14px;
   border-radius: 50%;
-  background: #6e93f7;
   align-items: center;
   justify-content: center;
   transition: 0.3s;
@@ -123,13 +117,13 @@ button:active {
 .dropdown-list-items {
   position: absolute;
   width: 218px;
-  margin-top: 15px;
+  margin-top: 4px;
   border-radius: 8px;
   padding: 16px;
-  background-color: #fff;
+  background-color: #202020;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
   display: none;
-  overflow-y: scroll;
+  overflow-y: auto;
   max-height: 400px;
   z-index: 10;
 }
@@ -150,13 +144,13 @@ button:active {
 }
 
 .dropdown-list-items .dropdown-item:hover {
-  background-color: #e7edfe;
+  background-color: #00000033;
 }
 
 .dropdown-item .dropdown-item-text {
   font-size: 14px;
   font-weight: 400;
-  color: #333;
+  color: #F0F0F0;
 }
 
 .dropdown-item .dropdown-checkbox {
@@ -172,8 +166,8 @@ button:active {
 }
 
 .dropdown-item.checked .dropdown-checkbox {
-  background-color: #4070f4;
-  border-color: #4070f4;
+  background-color: #5e3764;
+  border-color: #5e3764;
 }
 
 .dropdown-checkbox .dropdown-check-icon {
@@ -195,31 +189,34 @@ button:active {
  * elements within the div associated with the tab.
  */
 
+h2 {
+  width: 100%;
+  text-align: center;
+}
+
 #overview-viz-wrapper {
   display: flex;
   flex-direction: row;
-  background-color: black;
   gap: 12px;
   padding: 12px;
 }
 
 #overview #overview-panel {
   width: 20%;
-  border: 1px solid black;
-  padding: 10px;
+  padding: 20px;
   visibility: visible;
   background-color: #292929;
-  border-radius: 28px;
+  border-radius: 16px;
   color: white;
+  border: 1px solid #A6A6A6;
 }
 
 #overview #overview-media-selection {
   width: 20%;
-  border: 1px solid black;
   padding: 10px;
   visibility: visible;
   background-color: #292929;
-  border-radius: 28px;
+  border-radius: 16px;
   color: white;
 }
 
@@ -228,13 +225,41 @@ button:active {
   flex-direction: column;
   gap: 12px;
   width: 60%;
-  background-color: black;
 }
 
 #overview-controls {
   background-color: #292929;
-  border-radius: 28px;
+  border-radius: 16px;
   padding: 0px 16px;
+  width: 350px;
+}
+
+.dropdown-container div {
+  display: flex;
+  height: 40px;
+  gap: 5px;
+  margin-top: 10px;
+}
+
+.select-all {
+  border-radius: 8px;
+  border: 2px solid #5E3764;
+  background : transparent;
+  color: white;
+  font-size: 11pt;
+  padding: unset;
+  padding-left: 4px;
+  padding-right: 4px;
+}
+
+.remove-all {
+  border-radius: 8px;
+  background: #D74F4F;
+  color: white;
+  font-size: 11pt;
+  padding: unset;
+  padding-left: 4px;
+  padding-right: 4px;
 }
 
 #overview .categories {
@@ -244,7 +269,6 @@ button:active {
 #overview .tooltip {
   position: relative;
   display: inline-block;
-  border-bottom: 1px dotted black;
   background-color: #000;
   color: #f6f6f6;
   width: auto;
@@ -276,6 +300,9 @@ button:active {
 
 #overview .overview-heatmap-svg {
   background-color: #292929;
+  border-radius: 16px;
+  padding-top: 70px;
+  overflow: visible;
 }
 
 /************************** SONGS CSS RULES **************************
@@ -297,8 +324,8 @@ button:active {
   background-color: #292929;
   grid-row: 1 / span 2;
   grid-column: 2;
-  border: 2px solid #A6A6A6;
-  border-radius: 28px;
+  border: 1px solid #A6A6A6;
+  border-radius: 16px;
   padding: 20px;
 }
 
@@ -340,7 +367,7 @@ button:active {
 
 #songs #songs-control {
   background-color: #292929;
-  border-radius: 28px;
+  border-radius: 16px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -386,12 +413,11 @@ button:active {
 #songs .viz-container {
   padding-top: 10px;
   background-color: #151515;
-  border: 1px solid white;
 }
 
 #songs .songs-svg {
   background-color: #292929;
-  border-radius: 28px;
+  border-radius: 16px;
 }
 
 #songs .songs-button {
@@ -403,11 +429,11 @@ button:active {
 }
 
 #songs .points .selected {
-  fill: #387DAF;
+  fill: #5e3764;
 }
 
 #songs .points circle:hover {
-  fill: #387DAF;
+  fill: #5e3764;
 }
 
 /************************** VIDEO POSTING CSS RULES **************************
@@ -437,7 +463,6 @@ button:active {
 #video-length #video-viz-wrapper {
   display: flex;
   flex-direction: row;
-  background-color: black;
   gap: 12px;
   padding: 12px;
 }
@@ -445,34 +470,31 @@ button:active {
 #video-length #video-viz {
   width: 80%;
   height: 100%;
-  border: 1px solid black;
   padding: 10px;
   visibility: visible;
-  background-color: black;
-  border-radius: 28px;
+  border-radius: 16px;
   
 }
 
 #video-length #video-panel {
   width: 20%;
-  border: 1px solid black;
   padding: 10px;
   visibility: visible;
   background-color: #292929;
-  border-radius: 28px;
+  border-radius: 16px;
   color: white;
+  border: 1px solid #A6A6A6;
 }
 
 #video-length .video-viz-container {
-  border: 1px solid black;
-  border-radius: 28px;
+  border-radius: 16px;
   height: 80%;
   color: #f6f6f6;
 }
 
 #video-length .video-viz-container svg {
   background-color: #292929;
-  border-radius: 28px;
+  border-radius: 16px;
 }
 
 #video-length .controls-2 {
@@ -485,7 +507,7 @@ button:active {
 }
 
 #video-length #video-controls {
-  border-radius: 28px;
+  border-radius: 16px;
   padding: 0px 16px;
   height: 20%;
   display: flex;
@@ -494,3 +516,185 @@ button:active {
 
 }
 
+.tab-container {
+  height: 70px;
+  background: #5e3764;
+  display: flex;
+  gap: 16px;
+  align-items: center;
+  padding-left: 100px;
+}
+
+.tab-link {
+  background-color: #ffffff00;
+  border-radius: 12px;
+  color: white;
+  border: none;
+  height: 45px;
+}
+
+.tab-link:hover {
+  background: #ffffff11;
+}
+
+/************************** SLIDER CSS RULES **************************
+ *
+ * All of the CSS rules for the Slider
+ */
+
+.irs-from {
+  background-color: #5e3764 !important;
+}
+
+.irs-from::before {
+  border-top-color: #5e3764 !important;
+}
+
+.irs-to {
+  background-color: #5e3764 !important;
+}
+
+.irs-to::before {
+  border-top-color: #5e3764 !important;
+}
+
+.irs-single {
+  background-color: #5e3764 !important;
+}
+
+.irs-single::before {
+  border-top-color: #5e3764 !important;
+}
+
+.irs-bar {
+  background-color: #5e3764 !important;
+}
+
+.irs-handle {
+  border : 4px solid #5e3764 !important;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background-color: #151515;
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #5e3764; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #352438; ;
+}
+
+/************************** HASHTAGS CSS RULES **************************
+ *
+ * All of the CSS rules for the "Hashtags" tab.
+ *
+ * Every selector is prefixed by #hashtags and therefore only applies to
+ * elements within the div associated with the tab.
+ */
+
+#hashtags-viz-wrapper {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+}
+
+#hashtags-controls {
+  width: 350px;
+  background-color: #292929;
+  border-radius: 16px;
+  padding: 0 20px 20px 20px;
+}
+
+.hashtags-viz-container {
+  background-color: #292929;
+  border-radius: 16px;
+}
+
+.hashtags-viz-container svg {
+  width: 63vw;
+  padding-top: 70px;
+  background: none;
+  overflow: visible;
+}
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+  background-color: #000;
+  color: #f6f6f6;
+  width: auto;
+}
+
+.tooltip .tooltiptext {
+  text-align: center;
+  background-color: #555;
+  color: #fff;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 70%;
+  margin-left: -110px;
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+/************************** VIDEO POSTING CSS RULES **************************
+ *
+ * All of the CSS rules for the "Video posting" tab.
+ *
+ * Every selector is prefixed by #vp and therefore only applies to
+ * elements within the div associated with the tab.
+ */
+
+#vp-viz-container {
+  display: flex;
+  width: 100%;
+  align-items: stretch;
+  justify-content: space-around;
+}
+
+#vp-controls {
+  width: 350px;
+  background-color: #292929;
+  border-radius: 16px;
+  padding: 0 20px 20px 20px;
+}
+
+.video-posting-graph {
+  background-color: #292929;
+  border-radius: 16px;
+}
+
+.video-posting-graph svg {
+  width: 63vw;
+  padding-top: 70px;
+  background: none;
+  overflow: visible;
+}
+
+#video-posting h1 {
+  font-size: 29pt;
+}
