--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -838,6 +838,14 @@ button {
  * elements within the div associated with the tab.
  */
 
+#video-posting h2 {
+  font-weight: bold;
+}
+
+#video-posting h3 {
+  font-weight: bold;
+}
+
 #video-posting #vp-viz-container {
   display: flex;
   width: 100%;
@@ -847,10 +855,62 @@ button {
 }
 
 #video-posting #vp-controls {
-  width: 350px;
+  width: 300px;
   background-color: #292929;
   border-radius: 16px;
   padding: 0 20px 20px 20px;
+}
+
+#video-posting #vp-controls-sort-by {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+#video-posting #vp-radio-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+#video-posting #vp-radio-buttons h3 {
+  font-weight: normal;
+  font-size: 12pt;
+  margin: 12px 0;
+}
+
+#video-posting #vp-radio-buttons input[type='radio']:after {
+  width: 10px;
+  height: 10px;
+  border-radius: 10px;
+  top: -2px;
+  left: -1px;
+  position: relative;
+  background-color: white;
+  content: '';
+  display: inline-block;
+  visibility: visible;
+  border: 2px solid white;
+}
+
+#video-posting #vp-radio-buttons input[type='radio']:checked:after {
+  width: 10px;
+  height: 10px;
+  border-radius: 10px;
+  top: -2px;
+  left: -1px;
+  position: relative;
+  background-color: #5e3764;
+  content: '';
+  display: inline-block;
+  visibility: visible;
+  border: 2px solid white;
+}
+
+#video-posting #vp-controls-media-selection {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 #video-posting .video-posting-graph {
