--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -49,6 +49,7 @@ h2 {
 h3 {
   color: #f3f3f3;
   font-weight: normal;
+  font-size: 16px;
   margin-top: 30px;
 }
 
@@ -291,6 +292,45 @@ button {
   background: #352438; ;
 }
 
+/************************** HOME TAB CSS RULES **************************
+ *
+ * All of the CSS rules for the "About Thie Website" tab.
+ *
+ * Every selector is prefixed by #about-us and therefore only applies to
+ * elements within the div associated with the tab.
+ */
+
+#about-us header {
+  padding-left: 12vw;
+  padding-right: 12vw;
+}
+
+#about-us main {
+  padding-left: 12vw;
+  padding-right: 12vw;
+  display: flex;
+  flex-direction: column;
+}
+
+#about-us p {
+  font-size: 12pt;
+  color: #888;
+  text-align: justify;
+}
+
+#about-us h2 {
+  text-align: left;
+}
+
+#about-us h3 {
+  display: inline-block;
+  margin: 8px;
+}
+
+#about-us li {
+  color: #888888;
+}
+
 /************************** OVERVIEW CSS RULES **************************
  *
  * All of the CSS rules for the "Overview" tab.
@@ -305,6 +345,15 @@ button {
 
 #overview h3 {
   font-weight: bold;
+}
+
+#overview h2.title {
+  font-weight: normal;
+  font-size: 13pt;
+  color: darkgray;
+  width: 80%;
+  align-self: center;
+  text-align: left;
 }
 
 #overview-viz-wrapper {
@@ -611,22 +660,6 @@ button {
   fill: #387DAF;
 }
 
-/************************** VIDEO POSTING CSS RULES **************************
- *
- * All of the CSS rules for the "Video posting" tab.
- *
- * Every selector is prefixed by #video-posting and therefore only applies to
- * elements within the div associated with the tab.
- */
-
-#video-posting .tick line {
-  visibility: hidden;
-}
-
-#video-posting .axis path {
-  opacity: 0;
-}
-
 /************************** VIDEO LENGTH CSS RULES **************************
  *
  * All of the CSS rules for the "Video length" tab.
@@ -635,7 +668,16 @@ button {
  * elements within the div associated with the tab.
  */
 
-#video-length #video-viz-wrapper {
+ #video-length h2.title {
+  font-weight: normal;
+  font-size: 13pt;
+  color: darkgray;
+  width: 80%;
+  align-self: center;
+  text-align: left;
+}
+
+ #video-length #video-viz-wrapper {
   display: flex;
   flex-direction: row;
   gap: 30px;
@@ -861,6 +903,23 @@ button {
   font-weight: bold;
 }
 
+#video-posting h2.title {
+  font-weight: normal;
+  font-size: 13pt;
+  color: darkgray;
+  width: 80%;
+  align-self: center;
+  text-align: left;
+}
+
+#video-posting .tick line {
+  visibility: hidden;
+}
+
+#video-posting .axis path {
+  opacity: 0;
+}
+
 #video-posting #vp-viz-container {
   display: flex;
   width: 100%;
@@ -948,35 +1007,4 @@ button {
 
 #video-posting .radio-buttons input[type="radio"] {
   margin-right: 5px;
-}
-
-#about-us header {
-  padding-left: 12vw;
-  padding-right: 12vw;
-}
-
-#about-us main {
-  padding-left: 12vw;
-  padding-right: 12vw;
-  display: flex;
-  flex-direction: column;
-}
-
-#about-us p {
-  font-size: 12pt;
-  color: #888;
-  text-align: left;
-}
-
-#about-us h2 {
-  text-align: left;
-}
-
-#about-us h3 {
-  display: inline-block;
-  margin: 8px;
-}
-
-#about-us li {
-  color: #888888;
 }
