the heatmap is replaced by 'NO DATA' text when there is no data

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -908,7 +908,7 @@ button {
 }
 
 #video-posting .tick line {
-  visibility: hidden;
+  visibility: hidden !important;
 }
 
 #video-posting .axis path {
@@ -1002,4 +1002,8 @@ button {
 
 #video-posting .radio-buttons input[type="radio"] {
   margin-right: 5px;
+}
+
+#video-posting-graph-g {
+  visibility: visible !important;
 }
