added media names to media selection menu

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -192,12 +192,13 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 16px;
-  width: 16px;
+  height: 16px !important;
+  width: 16px !important;
   border-radius: 4px;
   margin-right: 12px;
   border: 1.5px solid #c0c0c0;
   transition: all 0.3s ease-in-out;
+  flex-shrink: 0;
 }
 
 .dropdown-item.checked .dropdown-checkbox {
